--- a/app/src/main/res/layout/activity_personalized.xml
+++ b/app/src/main/res/layout/activity_personalized.xml
@@ -63,6 +63,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/guideline7">
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/xui_config_color_gray_9" />
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -118,8 +123,8 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.1dp"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginEnd="15dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
                     android:background="@color/xui_config_color_gray_9" />
 
                 <LinearLayout
@@ -159,8 +164,8 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.1dp"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginEnd="15dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
                     android:background="@color/xui_config_color_gray_9" />
 
                 <LinearLayout
@@ -251,8 +256,8 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.1dp"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginEnd="15dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
                     android:background="@color/xui_config_color_gray_9" />
 
                 <TextView
@@ -324,9 +329,9 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.1dp"
-                    android:background="@color/xui_config_color_gray_9"
-                    tools:layout_editor_absoluteX="15dp"
-                    tools:layout_editor_absoluteY="44dp" />
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:background="@color/xui_config_color_gray_9" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -368,9 +373,9 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.1dp"
-                    android:background="@color/xui_config_color_gray_9"
-                    tools:layout_editor_absoluteX="15dp"
-                    tools:layout_editor_absoluteY="44dp" />
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:background="@color/xui_config_color_gray_9" />
 
                 <View
                     android:layout_width="match_parent"
