--- a/app/src/main/res/layout/activity_personalized.xml
+++ b/app/src/main/res/layout/activity_personalized.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".PersonalizedActivity">
+    tools:context=".activity.PersonalizedActivity">
 
     <ImageView
         android:id="@+id/background"
