--- a/app/src/main/res/layout/activity_set_term.xml
+++ b/app/src/main/res/layout/activity_set_term.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#E6E6E6"
     android:orientation="vertical"
-    tools:context=".SetTermActivity">
+    tools:context=".activity.SetTermActivity">
 
     <ScrollView
         android:layout_width="match_parent"
