--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".WebViewActivity">
+    tools:context=".activity.WebViewActivity">
 
     <include
         android:id="@+id/func_base_constraintLayout"
